--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "ajv": "6.12.0",
-    "axios": "0.21.1",
     "autoprefixer": "^9.1.0",
+    "axios": "0.21.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -50,6 +53,8 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
@@ -57,16 +62,23 @@
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-dropzone-component": "^3.2.0",
+    "react-html-parser": "^2.0.2",
+    "react-modal": "^3.8.1",
+    "react-redux": "5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
+    "react-truncate": "^2.4.0",
     "redux": "4.0.5",
     "sass-loader": "^7.1.0",
+    "striptags": "^3.1.1",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
@@ -81,6 +93,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.4"
   }
 }
